[tool.poetry]
name = "locl_muze"
version = "0.1.0"
description = ""
authors = ["Anthony Leotta <tony@leotta.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
