[tool.poetry]
name = "locl_muze"
version = "0.1.0"
description = ""
authors = ["Anthony Leotta <tony@leotta.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10.5"
pyside6 = "~6.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
